suthesh/fix-banner-uk-iom (#6924)
* fix banner not visible

* fix eslint

--- a/src/sass/_common/components.scss
+++ b/src/sass/_common/components.scss
@@ -537,6 +537,9 @@
     background-color: rgb(242, 242, 242);
     margin-bottom: 30px;
     border-radius: 0px;
+    padding-right: 0;
+    padding-left: 0;
+    margin-top: 30px;
 
     .close_banner_img {
         display: flex;
@@ -612,6 +615,9 @@
     background-color: rgb(242, 242, 242);
     margin-bottom: 30px;
     border-radius: 0px;
+    padding-right: 0;
+    padding-left: 0;
+    margin-top: 30px;
 
     .close_banner_img {
         display: flex;
